src/parser/snapshots/monkey_language_server__parser__test__infix_unhappy_4.snap
---
source: src/parser/test.rs
description: 1 + @
expression: result
---
[
    Err(UnexpectedToken("SyntaxError: Unexpected '@'."), (0,4)->(0,5)),
]

===================================

1 + @
    ^ [Error] SyntaxError: Unexpected '@'.
